# QLVB

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: README  env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_document_types.py  0003_app_settings.py  0004_seals.py  0005_signatures.py  0006_signing_profiles.py  0007_organizations.py  0008_outgoing_documents.py  0009_audit_created_index.py  0010_incoming_documents.py  0011_outgoing_in_reply_to.py  0012_tasks_notifications.py  0013_doctype_stamp_template.py  0014_incoming_attachments.py  0015_search_vector.py  0016_tags.py  0017_push_subscriptions.py  0018_attachment_search.py  0019_incoming_sender_org_name.py  0020_org_fullname_trgm.py  0021_task_drop_unit.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/core/: celery_app.py  config.py  database.py  deps.py  errors.py  http.py  images.py  logging.py  redis_client.py  security.py  storage.py
apps/backend/app/data/: vn-trust-list.json
apps/backend/app/models/: README.md  __init__.py  app_settings.py  audit_log.py  base.py  document_type.py  file.py  incoming_attachment.py  incoming_document.py  notification.py  organization.py  outgoing_document.py  processing_task.py  push_subscription.py  seal.py  signature.py  signing_profile.py  tag.py  unit.py  user.py
apps/backend/app/routers/: audit.py  auth.py  bg_removal.py  document_types.py  health.py  incoming.py  notifications.py  organizations.py  outgoing.py  push.py  reports.py  seals.py  search.py  settings.py  signatures.py  signing_profiles.py  tags.py  tasks.py  trash.py  units.py  users.py
apps/backend/app/schemas/: __init__.py  audit.py  auth.py  document_type.py  incoming.py  notification.py  organization.py  outgoing.py  push.py  report.py  seal.py  search.py  settings.py  signature.py  signing_profile.py  tag.py  tasks.py  unit.py  user.py
apps/backend/app/services/: __init__.py  audit.py  auth.py  bg_removal.py  convert.py  document_type.py  export.py  incoming.py  incoming_attachments.py  incoming_ocr.py  notification.py  numbering.py  organization.py  outgoing.py  pdf_stamp.py  push.py  report.py  seal.py  search.py  session.py  settings.py  sign_verify.py  signature.py  signing_profile.py  stamp_autodetect.py  tags.py  tasks.py  unit.py  user.py  watermark.py
apps/backend/app/workers/: __init__.py  convert.py  ocr.py  push.py  r2_sync.py  rembg_task.py  sign_verify.py  zip_export.py
apps/backend/tests/: README.md  conftest.py
apps/backend/tests/integration/: test_numbering_db.py  test_organization_db.py  test_push_db.py  test_report_db.py  test_search_db.py  test_tags_db.py
apps/backend/tests/unit/: test_audit_trash_router.py  test_authenticate.py  test_bg_removal.py  test_bg_removal_router.py  test_change_password.py  test_convert.py  test_d5_link.py  test_document_type.py  test_envelope_encryption.py  test_export.py  test_incoming.py  test_incoming_attachments.py  test_incoming_ocr.py  test_incoming_router.py  test_numbering.py  test_organization.py  test_outgoing.py  test_outgoing_router.py  test_pdf_stamp.py  test_push.py  test_report.py  test_seal.py  test_seals_router.py  test_search.py  test_session.py  test_settings.py  test_sign_verify.py  test_signature.py  (+9 more)
(+113 files in other folders)
